# cgpclient

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  RunInfo.xml  dr.json  dragen_bundle.json  dragen_bundle_formatted.json  drs.json  fastq_list.csv  fhir_transaction_bundle.json  foo.tbi  index.html  mkdocs.yml  objects.inv  pl.json  pyproject.toml  sitemap.xml  sp.json
.github/workflows/: ci.yml
assets/overrides/: main.html
cgpclient/: auth.py  client.py  dragen.py  drs.py  drsupload.py  fhir.py  htsget.py  utils.py
cgpclient/scripts/: create_apim_keys.sh  download_file  download_file.py  drs_upload.py  fetch_genomic_files.py  get_nhs_oauth_token  get_nhs_oauth_token.py  list_files  list_files.py  list_referrals  upload_dragen_fastq_list.py  upload_dragen_run  upload_dragen_run.py  upload_file  upload_file.py
contributing/: index.html
docs/: authentication.md  configuration.md  contributing.md  fetching_files.md  index.md  workshops.md
docs/set_up/: auth.md  config.md  configuration.md  get_started.md  jwt_auth.md  key_auth.md  register.md  set_up.md
docs/training/: dwgs_upload.md  generate_mock_run.sh  htsget-igv-integration.md  training.md
docs/uses/: code.md  fetching_files.md  submitting_files.md  upload_dragen_run.md  uploading_files.md  uses.md
search/: search_index.json
set_up/auth/: index.html
set_up/config/: index.html
set_up/configuration/: index.html
set_up/get_started/: index.html
set_up/jwt_auth/: index.html
set_up/key_auth/: index.html
set_up/register/: index.html
set_up/set_up/: index.html
tests/: test_client.py  test_drs.py  test_drsupload.py  test_fhir.py
training/: igv_snippet.html
uses/code/: index.html
workshops/: index.html
(+13 files in other folders)
